tests/dataset/tpc-h/compiler/cpp/q20.error
/tmp/TestCPPCompiler_TPCHQueriesq202134361497/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq202134361497/001/prog.cpp:297:21: error: no match for ‘operator==’ (operand types are ‘Shipped94’ and ‘Shipped94’)
  297 |         if (__g.key == __key) {
      |             ~~~~~~~ ^~ ~~~~~
      |                 |      |
      |                 |      Shipped94
      |                 Shipped94
